--- a/html/index.html
+++ b/html/index.html
@@ -9,11 +9,6 @@
     <div id="root" role="main"></div>
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/robotutils.js"></script>
-    <script type="text/javascript" src="js/init.js"></script>
-    <script>
-        window.addEventListener('load', function() {
-          window.___APPLICATION___ = window.___APPLICATION___();
-        });
-    </script>
+    <!--<script type="text/javascript" src="js/init.js"></script>-->
 <script type="text/javascript" src="js/app.js"></script></body>
 </html>
