--- a/html/index.html
+++ b/html/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>sergeant-pepper</title>
-    <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/robotutils.js"></script>
-<link href="css/app.css" rel="stylesheet"></head>
-<body>
-    <div id="root" role="main"></div>
-<script type="text/javascript" src="js/app.js"></script></body>
+  <head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta http-equiv="content-language" content="en"/>
+    <title>Sergeant Pepper</title>
+    <link rel="stylesheet" href="css/html5reset-1.6.1.css" media="all"/>
+    <link rel="stylesheet" href="css/style.css" media="all"/>
+  </head>
+
+  <body>
+    <main>
+      <div id="content-wrapper"></div>
+    </main>
+
+    <script src="js/robotutils.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/script.js"></script>
+  </body>
 </html>
